[package]
name = "health"
description = "Health reporting and checking library"
keywords = [ "health", "healthcheck" ]
categories = [ "web-programming::http-server", "rust-patterns" ]
version = "0.1.2"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/neoeinstein/health"

[features]
default = ["tokio_0_3", "tracing"]

[dependencies]
async-trait = "0.1.41"
parking_lot = "0.11"
tokio_0_2 = { version = "0.2", features = ["time"], package = "tokio", optional = true }
tokio_0_3 = { version = "0.3", features = ["time"], package = "tokio", optional = true }
tracing = { version = "0.1.21", optional = true }

[dev-dependencies]
actix-web = "3.0"
color-eyre = "0.5"
cadence = "0.22"
futures = "0.3"
sqlx = { version = "0.3", features = ["mysql", "runtime-tokio"], default-features = false }
tokio_0_2 = { version = "0.2", features = ["rt-core", "macros", "time"], package = "tokio" }
tokio_0_3 = { version = "0.3", features = ["rt-multi-thread", "macros", "time"], package = "tokio" }
tracing-subscriber = "0.2"
