[package]
name = "health"
description = "Health reporting and checking library"
keywords = [ "health", "healthcheck" ]
categories = [ "web-programming::http-server", "rust-patterns" ]
version = "0.2.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/health"

[features]
default = ["tracing"]

[dependencies]
async-trait = "0.1.41"
parking_lot = "0.12"
tokio = { version = "1", features = ["time"] }
tracing = { version = "0.1.21", optional = true }

[dev-dependencies]
actix-web = "4.0"
color-eyre = "0.6"
cadence = "0.29"
futures = "0.3"
sqlx = { version = "0.5", features = ["mysql", "runtime-tokio-rustls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
